# KatanaOpenAssetIO

./: .clang-format  CMakeLists.txt  NOTICE  README.md
cmake/: installers.cmake  platform.cmake  thirdparty.cmake
src/: CMakeLists.txt  Constants.hpp  KatanaHostInterface.hpp  OpenAssetIOAsset.hpp  OpenAssetIOPlugin.cpp  OpenAssetIOWidgetDelegate.py  PublishStrategies.cpp  PublishStrategies.cpp.py  PublishStrategies.hpp  PublishStrategies.py  Utilities.cpp  Utilities.hpp  config.hpp.in
